--- a/image_classification.ipynb
+++ b/image_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -12,34 +12,34 @@
       "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
       "11490434/11490434 [==============================] - 0s 0us/step\n",
       "Epoch 1/10\n",
-      "1875/1875 [==============================] - 9s 4ms/step - loss: 0.1713 - accuracy: 0.9498 - val_loss: 0.0713 - val_accuracy: 0.9770\n",
+      "1875/1875 [==============================] - 63s 33ms/step - loss: 0.1689 - accuracy: 0.9507 - val_loss: 0.0710 - val_accuracy: 0.9774\n",
       "Epoch 2/10\n",
-      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0609 - accuracy: 0.9816 - val_loss: 0.0519 - val_accuracy: 0.9819\n",
+      "1875/1875 [==============================] - 55s 29ms/step - loss: 0.0600 - accuracy: 0.9820 - val_loss: 0.0558 - val_accuracy: 0.9822\n",
       "Epoch 3/10\n",
-      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0420 - accuracy: 0.9875 - val_loss: 0.0483 - val_accuracy: 0.9835\n",
+      "1875/1875 [==============================] - 74s 39ms/step - loss: 0.0404 - accuracy: 0.9874 - val_loss: 0.0489 - val_accuracy: 0.9832\n",
       "Epoch 4/10\n",
-      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0299 - accuracy: 0.9905 - val_loss: 0.0488 - val_accuracy: 0.9839\n",
+      "1875/1875 [==============================] - 79s 42ms/step - loss: 0.0289 - accuracy: 0.9914 - val_loss: 0.0470 - val_accuracy: 0.9851\n",
       "Epoch 5/10\n",
-      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0210 - accuracy: 0.9934 - val_loss: 0.0489 - val_accuracy: 0.9845\n",
+      "1875/1875 [==============================] - 62s 33ms/step - loss: 0.0207 - accuracy: 0.9935 - val_loss: 0.0436 - val_accuracy: 0.9863\n",
       "Epoch 6/10\n",
-      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0156 - accuracy: 0.9950 - val_loss: 0.0508 - val_accuracy: 0.9851\n",
+      "1875/1875 [==============================] - 79s 42ms/step - loss: 0.0151 - accuracy: 0.9953 - val_loss: 0.0532 - val_accuracy: 0.9842\n",
       "Epoch 7/10\n",
-      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0117 - accuracy: 0.9960 - val_loss: 0.0562 - val_accuracy: 0.9848\n",
+      "1875/1875 [==============================] - 66s 35ms/step - loss: 0.0109 - accuracy: 0.9965 - val_loss: 0.0530 - val_accuracy: 0.9855\n",
       "Epoch 8/10\n",
-      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0094 - accuracy: 0.9971 - val_loss: 0.0556 - val_accuracy: 0.9860\n",
+      "1875/1875 [==============================] - 56s 30ms/step - loss: 0.0096 - accuracy: 0.9968 - val_loss: 0.0573 - val_accuracy: 0.9854\n",
       "Epoch 9/10\n",
-      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0062 - accuracy: 0.9980 - val_loss: 0.0602 - val_accuracy: 0.9845\n",
+      "1875/1875 [==============================] - 60s 32ms/step - loss: 0.0063 - accuracy: 0.9980 - val_loss: 0.0544 - val_accuracy: 0.9856\n",
       "Epoch 10/10\n",
-      "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0069 - accuracy: 0.9977 - val_loss: 0.0688 - val_accuracy: 0.9833\n"
+      "1875/1875 [==============================] - 54s 29ms/step - loss: 0.0058 - accuracy: 0.9980 - val_loss: 0.0574 - val_accuracy: 0.9864\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fe448d3c9a0>"
+       "<keras.callbacks.History at 0x2a24f3c8190>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
