--- a/image_classification.ipynb
+++ b/image_classification.ipynb
@@ -6,37 +6,45 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-06-30 18:54:28.797021: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-      "11490434/11490434 [==============================] - 0s 0us/step\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
       "Epoch 1/10\n",
-      "1875/1875 [==============================] - 63s 33ms/step - loss: 0.1689 - accuracy: 0.9507 - val_loss: 0.0710 - val_accuracy: 0.9774\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.1813 - accuracy: 0.9472 - val_loss: 0.0795 - val_accuracy: 0.9741\n",
       "Epoch 2/10\n",
-      "1875/1875 [==============================] - 55s 29ms/step - loss: 0.0600 - accuracy: 0.9820 - val_loss: 0.0558 - val_accuracy: 0.9822\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0635 - accuracy: 0.9809 - val_loss: 0.0571 - val_accuracy: 0.9822\n",
       "Epoch 3/10\n",
-      "1875/1875 [==============================] - 74s 39ms/step - loss: 0.0404 - accuracy: 0.9874 - val_loss: 0.0489 - val_accuracy: 0.9832\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0422 - accuracy: 0.9866 - val_loss: 0.0520 - val_accuracy: 0.9832\n",
       "Epoch 4/10\n",
-      "1875/1875 [==============================] - 79s 42ms/step - loss: 0.0289 - accuracy: 0.9914 - val_loss: 0.0470 - val_accuracy: 0.9851\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0316 - accuracy: 0.9901 - val_loss: 0.0514 - val_accuracy: 0.9852\n",
       "Epoch 5/10\n",
-      "1875/1875 [==============================] - 62s 33ms/step - loss: 0.0207 - accuracy: 0.9935 - val_loss: 0.0436 - val_accuracy: 0.9863\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0226 - accuracy: 0.9927 - val_loss: 0.0480 - val_accuracy: 0.9848\n",
       "Epoch 6/10\n",
-      "1875/1875 [==============================] - 79s 42ms/step - loss: 0.0151 - accuracy: 0.9953 - val_loss: 0.0532 - val_accuracy: 0.9842\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0163 - accuracy: 0.9947 - val_loss: 0.0485 - val_accuracy: 0.9846\n",
       "Epoch 7/10\n",
-      "1875/1875 [==============================] - 66s 35ms/step - loss: 0.0109 - accuracy: 0.9965 - val_loss: 0.0530 - val_accuracy: 0.9855\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0128 - accuracy: 0.9959 - val_loss: 0.0521 - val_accuracy: 0.9841\n",
       "Epoch 8/10\n",
-      "1875/1875 [==============================] - 56s 30ms/step - loss: 0.0096 - accuracy: 0.9968 - val_loss: 0.0573 - val_accuracy: 0.9854\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0094 - accuracy: 0.9971 - val_loss: 0.0522 - val_accuracy: 0.9864\n",
       "Epoch 9/10\n",
-      "1875/1875 [==============================] - 60s 32ms/step - loss: 0.0063 - accuracy: 0.9980 - val_loss: 0.0544 - val_accuracy: 0.9856\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0072 - accuracy: 0.9977 - val_loss: 0.0544 - val_accuracy: 0.9862\n",
       "Epoch 10/10\n",
-      "1875/1875 [==============================] - 54s 29ms/step - loss: 0.0058 - accuracy: 0.9980 - val_loss: 0.0574 - val_accuracy: 0.9864\n"
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0060 - accuracy: 0.9982 - val_loss: 0.0581 - val_accuracy: 0.9857\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2a24f3c8190>"
+       "<keras.callbacks.History at 0x7fc779d0b490>"
       ]
      },
      "execution_count": 1,
@@ -86,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
