--- a/image_classification.ipynb
+++ b/image_classification.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-06-30 18:54:28.797021: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
+      "2023-12-31 14:39:21.185560: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -19,32 +19,46 @@
      "text": [
       "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
       "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
-      "Epoch 1/10\n",
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.1813 - accuracy: 0.9472 - val_loss: 0.0795 - val_accuracy: 0.9741\n",
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-12-31 14:40:15.901537: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.1704 - accuracy: 0.9499 - val_loss: 0.0767 - val_accuracy: 0.9751\n",
       "Epoch 2/10\n",
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0635 - accuracy: 0.9809 - val_loss: 0.0571 - val_accuracy: 0.9822\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0593 - accuracy: 0.9818 - val_loss: 0.0491 - val_accuracy: 0.9832\n",
       "Epoch 3/10\n",
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0422 - accuracy: 0.9866 - val_loss: 0.0520 - val_accuracy: 0.9832\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0379 - accuracy: 0.9883 - val_loss: 0.0499 - val_accuracy: 0.9841\n",
       "Epoch 4/10\n",
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0316 - accuracy: 0.9901 - val_loss: 0.0514 - val_accuracy: 0.9852\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0274 - accuracy: 0.9913 - val_loss: 0.0426 - val_accuracy: 0.9864\n",
       "Epoch 5/10\n",
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0226 - accuracy: 0.9927 - val_loss: 0.0480 - val_accuracy: 0.9848\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0181 - accuracy: 0.9943 - val_loss: 0.0436 - val_accuracy: 0.9858\n",
       "Epoch 6/10\n",
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0163 - accuracy: 0.9947 - val_loss: 0.0485 - val_accuracy: 0.9846\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0140 - accuracy: 0.9954 - val_loss: 0.0435 - val_accuracy: 0.9874\n",
       "Epoch 7/10\n",
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0128 - accuracy: 0.9959 - val_loss: 0.0521 - val_accuracy: 0.9841\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0103 - accuracy: 0.9965 - val_loss: 0.0518 - val_accuracy: 0.9853\n",
       "Epoch 8/10\n",
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0094 - accuracy: 0.9971 - val_loss: 0.0522 - val_accuracy: 0.9864\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0073 - accuracy: 0.9976 - val_loss: 0.0447 - val_accuracy: 0.9885\n",
       "Epoch 9/10\n",
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0072 - accuracy: 0.9977 - val_loss: 0.0544 - val_accuracy: 0.9862\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0067 - accuracy: 0.9977 - val_loss: 0.0538 - val_accuracy: 0.9862\n",
       "Epoch 10/10\n",
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0060 - accuracy: 0.9982 - val_loss: 0.0581 - val_accuracy: 0.9857\n"
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0048 - accuracy: 0.9984 - val_loss: 0.0582 - val_accuracy: 0.9867\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fc779d0b490>"
+       "<keras.callbacks.History at 0x7fd690b48490>"
       ]
      },
      "execution_count": 1,
@@ -80,7 +94,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "Python 3.10.11 ('tensorflow_env')",
    "language": "python",
    "name": "python3"
   },
@@ -94,12 +108,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "25b24729ed588c18f0818cf5156368849fd910e56a03fee9310311f9c34e59fa"
+    "hash": "3d3cc432ad56c3c569a9cc0093577e0f04ca08d19ae25fb58dc81b747e440b17"
    }
   }
  },
